Fix height of text tiles on film page cut off

--- a/src/styles/film-tile.styl
+++ b/src/styles/film-tile.styl
@@ -162,7 +162,6 @@ film-tile-tablet() {
     p {
       font-size: 1.2em;
     }
-    height: 100%;
   }
 }
 
